fix: header styles on mobile (#267)

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -18,9 +18,9 @@
 }
 
 .searchInput {
-    position: relative;
-    left: 1em;
-    width: 16em;
+    margin-left: 8px;
+    min-width: 4em;
+    max-width: 14em;
 }
 
 .advertisingText {
@@ -40,7 +40,7 @@
     font: var(--paragraph3);
 }
 
-.navigation .actions {
+.actions {
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -48,11 +48,16 @@
     height: 50px;
     padding: 0 8px;
     gap: 30px;
+
+    & > * {
+        flex: none;
+    }
 }
 
 .cartButton {
     padding: 0;
 }
+
 .cart {
     transform: translateY(-2px);
 }
@@ -85,7 +90,7 @@
     }
 
     .navigation {
-        grid-template-columns: auto 1fr;
+        grid-template-columns: auto auto;
         align-items: center;
     }
 
@@ -100,9 +105,5 @@
         align-items: start;
         justify-content: center;
         font-size: 13px;
-    }
-
-    .searchInput {
-        width: 10em;
     }
 }
