--- a/src/components/search-input/search-input.module.scss
+++ b/src/components/search-input/search-input.module.scss
@@ -1,15 +1,16 @@
-.form {
+.label {
     display: flex;
     align-items: center;
-    gap: 0.3em;
-    width: 100%;
+    gap: 8px;
+    font: var(--paragraph3);
 }
 
 .input {
     flex: 1;
     border: none;
+    padding: 0;
     background: none;
-    font-size: 0.9em;
+    min-width: 0;
 
     &:focus-visible {
         box-shadow: none;
@@ -17,14 +18,14 @@
 }
 
 .searchIcon {
-    width: 1em;
-    height: 1em;
+    width: 14px;
+    height: 14px;
 }
 
 .clearIcon {
     cursor: pointer;
-    width: 0.6em;
-    height: 0.6em;
+    width: 8px;
+    height: 8px;
 }
 
 .input:placeholder-shown + .clearIcon {
