--- a/src/components/user-menu/user-menu.module.scss
+++ b/src/components/user-menu/user-menu.module.scss
@@ -1,11 +1,12 @@
-.root,
-.root.link {
-    cursor: pointer;
-    background-color: transparent;
-    border: none;
+.root {
+    padding: 0;
+    border: 0;
     display: flex;
     align-items: center;
     gap: 12px;
+    font: var(--paragraph3);
+    cursor: pointer;
+    background-color: transparent;
 }
 
 .link {
